@@ -1,4 +1,4 @@
-.TH VIFM 1 "August 7, 2018" "vifm 0.9.1"
+.TH VIFM 1 "September 1, 2018" "vifm 0.9.1"
 .\" ---------------------------------------------------------------------------
 .SH NAME
 .\" ---------------------------------------------------------------------------
@@ -5156,6 +5156,7 @@ The result is a string, which represents file type and is one of the list:
 
 Parameter {fnum} can have following values:
     \- '.' to get type of file under the cursor in the active pane
+    \- numerical value base 1 to get type of file on specified line number
 
 .BI fnameescape({expr})
 
